--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,11 @@ body {
        .islider-active .page3 p{
             top: 43%
         }
+    .page4 .top,.page4 .bot{
+                width:100%;
+                height:50%;
+                overflow:hidden
+    }
     .page4 .top img{
         position: absolute;
         left: 0;
