--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,8 @@ body {
     .page4 .bot img{
         position: absolute;
         left: 0;
+        width:100%;
+        height:50%;
         bottom: -100%;
         transition: all ease 0.3s;
     }
